Wed Jun 21 14:10:38 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Array_VarOut_T.h:
        
          Removed 'typename' qualifier in typedef of FORANY inside the
          TAO_Array_Var_Base_T template class, since it was causing
          problems on the FC4_CIAO_Core build.

Wed Jun 21 13:50:57 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Credentials.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Current.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_OwnCredentials.h:
        * orbsvcs/orbsvcs/Security/SL3_CredentialsCurator.h:
        
          Added typedefs _ptr_type, _var_type, and _out_type to
          these "interface" classes, since the typedefs are now
          required by the *_var and *_out template classes.

Wed Jun 21 12:13:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_sequence.cpp:
        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be/be_visitor_array/array_ch.cpp:
        * TAO_IDL/be/be_visitor_array/array_ci.cpp:
        * TAO_IDL/be/be_visitor_typedef/typedef_ch.cpp:
        * tao/Array_Traits_T.h
        * tao/Array_VarOut_T.cpp
        * tao/Array_VarOut_T.h
        * tao/Array_VarOut_T.inl
        * tao/BD_String_Argument_T.cpp
        * tao/Bounded_Array_Sequence_T.h
        * tao/Bounded_Sequence_CDR_T.h
        * tao/Fixed_Array_Argument_T.cpp
        * tao/Unbounded_Array_Sequence_T.h
        * tao/Unbounded_Sequence_CDR_T.h
        * tao/Var_Array_Argument_T.cpp
          Reworked array support, remove the traits struct I added and use the
          forany class in most templates, this is how Jeff refactoring things
          earlier this week, my approach just gave to much problems.

Wed Jun 21 07:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BD_String_Argument_T.cpp:
          Fixed compile problems by added a seperate typedef and use
          this in the methods.
